--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -229,19 +229,28 @@ footer {
 }
 
 @media (max-width: 1100px) {
-  #logo-text h1 {
+  body {
+    margin-inline: 1.5rem;
     text-align: center;
   }
-  body {
-    margin-inline: 0;
-    padding-inline: 1.5rem;
-    text-align: center;
+  #nav-list {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    grid-template-rows: repeat(2, auto);
+    grid-column-gap: 0.1rem;
+    grid-row-gap: 0.1rem;
+  }
+  #nav-list a {
+    padding-block: 0.5rem;
+    padding-inline: 1rem;
+    background-color: lightslategray;
+    border: solid 1px black;
+    border-radius: 1rem;
   }
 
-  #nav-list {
-    gap: 1rem;
-    align-items: center;
-    line-height: 1.25rem;
+  #current a {
+    background-color: black;
+    border: solid 1px lightslategray;
   }
 
   nav a {
@@ -280,6 +289,9 @@ footer {
 
   #worsening-paragraph {
     padding: 0;
+  }
+  #worsening-paragraph p {
+    text-align: center;
   }
 
   #solution-image img {
